maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:11: error: ')' expected but 'else' found.
  right(); if (!isFacingWall()) {while (!isFacingWall()) {left(); if (!isFacingWall() {forward()} else {left(); left(); forward()} ; right()}}}
                                                                                                  ^