maze.island.IslandMaze.scala.code
override def run() {
  
  
  
  
  
  
  
  
  right(); if (!isFacingWall()) {while (!isFacingWall()) {left(); if (!isFacingWall() {forward()} else {left(); left(); forward()} ; right()}}}
